--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NEXTAUTH_SECRET=9KCaqVpk3/Jh+5+FKgi3OTUMM7qPlkbtWAIdzs+ZOsU=
 NEXTAUTH_URL=http://localhost:3000
 # NEXT_PUBLIC_API_URL=https://backend-mmc1134.onrender.com/api/v1
-NEXT_PUBLIC_API_URL=http://localhost:5100/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:5000
