--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns-tz": "^1.3.7",
     "dompurify": "^3.2.5",
     "embla-carousel-react": "^8.6.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.503.0",
     "next": "14.2.24",
     "next-auth": "^4.24.11",
