--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.56.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
