--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.56.1",
     "react-quill": "^2.0.0",
     "recharts": "^2.15.3",
+    "sharp": "^0.34.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
