--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-avatar-editor": "^13.0.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropdown": "^1.11.0",
