--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXTAUTH_SECRET=mOZlFdLk51OmNE/ZZZOUNVzeiBhWLLMUFP2kxEq/fow=
 NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=https://n-krypted-backend-0g0t.onrender.com
+# NEXT_PUBLIC_API_URL=https://n-krypted-backend-0g0t.onrender.com
+NEXT_PUBLIC_API_URL=http://localhost:5000
