--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXTAUTH_SECRET=mOZlFdLk51OmNE/ZZZOUNVzeiBhWLLMUFP2kxEq/fow=
 NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=https://n-krypted-backend-n9v6.onrender.com
-# NEXT_PUBLIC_API_URL=http://localhost:5000
+# NEXT_PUBLIC_API_URL=https://n-krypted-backend-n9v6.onrender.com
+NEXT_PUBLIC_API_URL=http://localhost:5000
 NEXT_PUBLIC_SOCKET_URL=http://localhost:5000
