--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 NEXTAUTH_SECRET=mOZlFdLk51OmNE/ZZZOUNVzeiBhWLLMUFP2kxEq/fow=
 NEXTAUTH_URL=http://localhost:3000
 
-# NEXT_PUBLIC_API_URL=http://localhost:5000
+NEXT_PUBLIC_API_URL=http://localhost:5000
 # NEXT_PUBLIC_API_URL=https://api.walkthroughz.com
-NEXT_PUBLIC_API_URL=d
+# NEXT_PUBLIC_API_URL=d
 
-NEXT_PUBLIC_SOCKET_URL=https://api.walkthroughz.com
+# NEXT_PUBLIC_SOCKET_URL=https://api.walkthroughz.com
+NEXT_PUBLIC_SOCKET_URL=http://localhost:5000
