--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-avatar-editor": "^13.0.2",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropdown": "^1.11.0",
