--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.56.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "recharts": "^2.15.3",
     "sharp": "^0.34.1",
