--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXTAUTH_SECRET=mOZlFdLk51OmNE/ZZZOUNVzeiBhWLLMUFP2kxEq/fow=
 NEXTAUTH_URL=http://localhost:3000
 
-NEXT_PUBLIC_API_URL=https://n-krypted-backend-s123.onrender.com
+NEXT_PUBLIC_API_URL=http://localhost:5000
 # NEXT_PUBLIC_API_URL=https://api.walkthroughz.com
 # NEXT_PUBLIC_API_URL=d
 
